modified:   .vscode/settings.json 	modified:   include/Gene.hpp 	modified:   include/NEAT.hpp 	modified:   include/Network.hpp 	modified:   include/Neuron.hpp 	modified:   main.cpp 	deleted:    main.exe

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,7 +68,9 @@
         "sstream": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp"
     },
     "C_Cpp.intelliSenseEngineFallback": "enabled"
 }
